force-app/main/default/objects/mockit__mdt/mockit__mdt.object-meta.xml
<CustomObject>
    <label>mockit</label>
    <pluralLabel>mockits</pluralLabel>
</CustomObject>