force-app/main/default/objects/mockit__mdt/fields/Match__c.field-meta.xml
<CustomField>
    <fullName>Match__c</fullName>
    <label>Match</label>
    <type>TextArea</type>
</CustomField>