force-app/main/default/objects/mockit__mdt/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <label>Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>200</fullName>
                <default>true</default>
                <label>200</label>
            </value>
            <value>
                <fullName>201</fullName>
            </value>
            <value>
                <fullName>202</fullName>
            </value>
            <value>
                <fullName>204</fullName>
            </value>
            <value>
                <fullName>206</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>301</fullName>
            </value>
            <value>
                <fullName>302</fullName>
            </value>
            <value>
                <fullName>304</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>401</fullName>
            </value>
            <value>
                <fullName>403</fullName>
            </value>
            <value>
                <fullName>404</fullName>
            </value>
            <value>
                <fullName>405</fullName>
            </value>
            <value>
                <fullName>406</fullName>
            </value>
            <value>
                <fullName>409</fullName>
            </value>
            <value>
                <fullName>410</fullName>
            </value>
            <value>
                <fullName>412</fullName>
            </value>
            <value>
                <fullName>413</fullName>
            </value>
            <value>
                <fullName>414</fullName>
            </value>
            <value>
                <fullName>415</fullName>
            </value>
            <value>
                <fullName>417</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>503</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>